[package]
name = "threads_pool"
description = "This package provides an easy way to create and manage thread pools, so you don't have to."
authors = ["Jacob Zuo <chopinsky@live.com>"]
version = "0.2.5"
readme = "README.md"
documentation = "https://docs.rs/thread_pool/"
repository = "https://github.com/Chopinsky/thread_pool.git"
license = "MIT"
edition = "2018"

[dependencies]
crossbeam-channel = "^0.3.0"
hashbrown = "^0.1.8"
parking_lot = "^0.7.1"

[dev-dependencies]
criterion = "0.2"
futures-channel = "0.3.1"
async-task = "1.0.0"

[[bench]]
name = "thread_pool_bench"
harness = false
